--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check code formatting with Prettier
+        run: npm run format:check
+
       - name: Build Svelte app
         run: npm run build
 
