--- a/package.json
+++ b/package.json
@@ -6,10 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "prepare": "husky",
+    "lint": "prettier --check ."
+  },
+  "lint-staged": {
+    "*.{js,svelte,json,yml,yaml,md,html,css}": "prettier --write"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.8.1",
+    "prettier-plugin-svelte": "^3.4.1",
     "svelte": "^4.2.12",
     "vite": "^5.2.0"
   },
