--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "snarkdown": "^2.0.0"
   }
 }
