--- a/public/data/tools/vole.yml
+++ b/public/data/tools/vole.yml
@@ -2,8 +2,10 @@ tool_info:
   name: Vol-E
   id: vole
   viewer_url: https://volumeviewer.allencell.org/viewer?url=
-  test_instructions: >
-    Open via URL, example: https://volumeviewer.allencell.org/viewer?url=https://example.org/data.zarr
+  test_instructions: |
+    Open via URL, example:
+
+    [https://volumeviewer.allencell.org/viewer?url=https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.4/idr0062A/6001240.zarr](https://volumeviewer.allencell.org/viewer?url=https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.4/idr0062A/6001240.zarr)
 test_info:
   test-2:
     date: 2026-01-29
