--- a/public/data/tools/vtk-itk-viewer.yml
+++ b/public/data/tools/vtk-itk-viewer.yml
@@ -2,8 +2,10 @@ tool_info:
   name: vtk-itk-viewer
   id: vtk-itk-viewer
   viewer_url: https://kitware.github.io/itk-vtk-viewer/app/?rotate=false&fileToLoad=
-  test_instructions: >
-    Open via URL, example: https://kitware.github.io/itk-vtk-viewer/app/?rotate=false&fileToLoad=https://example.org/data.zarr
+  test_instructions: |
+    Open via URL, example:
+
+    [https://kitware.github.io/itk-vtk-viewer/app/?rotate=false&fileToLoad=https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.4/idr0062A/6001240.zarr](https://kitware.github.io/itk-vtk-viewer/app/?rotate=false&fileToLoad=https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.4/idr0062A/6001240.zarr)
 test_info:
   test-1:
     features:
