--- a/public/data/tools/vizarr.yml
+++ b/public/data/tools/vizarr.yml
@@ -7,6 +7,13 @@ tool_info:
 
     [https://hms-dbmi.github.io/vizarr/?source=https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.4/idr0062A/6001240.zarr](https://hms-dbmi.github.io/vizarr/?source=https://uk1s3.embassy.ebi.ac.uk/idr/zarr/v0.4/idr0062A/6001240.zarr)
 test_info:
+  test-2:
+    date: 2026-01-29
+    features:
+      0.5:
+        basic_display:
+          supported: yes
+          opens: yes
   test-1:
     tool_version: "April 2025"
     features:
